# zibbo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.codex-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py  cache.py  datasets.py  documents.py  large_payload.py  overhead.py  prompts.py  run.py  upstream.py
benchmarks/coding/: __init__.py  __main__.py  integrity.py  models.py  pricing.py  report.py  runner.py
benchmarks/coding/datasets/: checksums.json  manifest.json
benchmarks/coding/datasets/django/: error-log.txt
benchmarks/coding/datasets/fastapi/: openapi.json  readme.md
benchmarks/coding/datasets/go/: service.go
benchmarks/coding/datasets/nextjs/: docs-page.html  release-notes.html
benchmarks/coding/datasets/node/: api-response.json
benchmarks/coding/datasets/react/: UserCard.tsx
benchmarks/coding/datasets/rust/: handlers.rs
benchmarks/coding/datasets/typescript/: tsconfig.json
benchmarks/results/: report.md  results.json  summary.csv  website-stats.json
compat/openai-js/: compat.test.mjs  package.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CACHE.md  COMPATIBILITY.md  DOCUMENT_TRANSFORMERS.md  EXTENDING.md  OPTIMIZATION.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PROMPT_OPTIMIZATION.md  PROVIDERS.md
docs/assets/: README.md
examples/llmgateway-transformer-csv/: README.md  pyproject.toml
examples/llmgateway-transformer-csv/src/llmgateway_transformer_csv/: __init__.py
examples/llmgateway-transformer-csv/tests/: test_csv_plugin.py
examples/zibbo-transformer-csv/: README.md  pyproject.toml
examples/zibbo-transformer-csv/src/zibbo_transformer_csv/: __init__.py
examples/zibbo-transformer-csv/tests/: test_csv_plugin.py
gateway/: __init__.py  __main__.py  claude_env.py  cli.py  config.py  endpoint.py  errors.py  health.py  lifecycle.py  logging.py  main.py  plugin_dev.py  runtime.py
gateway/analytics/: __init__.py  engine.py  models.py
gateway/api/: __init__.py  deps.py  router.py
gateway/api/routes/: __init__.py  cache.py  health.py  internal.py  plugins.py  proxy.py
gateway/api/schemas/: __init__.py  cache.py  health.py  internal.py  plugins.py
gateway/cache/: __init__.py  backend.py  memory.py  models.py  redis.py  service.py
gateway/documents/: __init__.py  base.py  detection.py  models.py  options.py  registry.py  service.py
gateway/documents/convert/: __init__.py  csv_table.py  xml_tree.py
gateway/documents/extractors/: __init__.py  docx.py  pdf.py  text_formats.py
gateway/middleware/: __init__.py  request_context.py
gateway/optimizers/: __init__.py  base.py  detector.py  extraction.py  models.py  options.py  pipeline.py  policy.py  registry.py
gateway/optimizers/transformers/: __init__.py  html.py  json.py  prompt.py  text.py
gateway/plugins/: __init__.py  api.py  discovery.py  errors.py  manager.py  sdk.py
gateway/providers/: __init__.py  anthropic.py  auth.py  base.py  headers.py  openai.py  proxy.py  registry.py  schemas.py
gateway/storage/: __init__.py
gateway/tokenizers/: __init__.py  base.py  heuristic.py  registry.py  tiktoken_counter.py
gateway/utils/: __init__.py  ids.py
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: benchmark.md  claude.md  connect.md  disable.md  disconnect.md  doctor.md  enable.md  explain.md  logs.md  start.md  stats.md  stop.md  zibbo.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: session-start.sh  zibbo.sh
plugins/codex/: README.md
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/skills/zibbo/: SKILL.md
tests/: __init__.py  conftest.py  test_analytics_engine.py  test_anthropic_sdk_compat.py  test_app.py  test_benchmark_suite.py  test_cache_backends.py  test_cache_endpoint.py  test_cache_pipeline.py  test_cache_properties.py  test_cache_service.py  test_chaos.py  test_claude_env.py  test_cli.py  test_config.py  test_document_detection.py  test_document_extractors.py  test_document_pipeline.py  test_document_properties.py  test_endpoint.py  test_errors.py  test_health_endpoints.py  test_health_registry.py  test_internal_api.py  test_lifecycle.py  test_multi_provider.py  test_openai_sdk_compat.py  test_optimizer_detector.py  test_optimizer_pipeline.py  test_optimizer_policy.py  test_optimizer_properties.py  test_optimizer_transformers.py  test_optimizer_validity.py  test_plugin_dev.py  test_plugin_resolver.py  test_plugins.py  test_prompt_optimization_e2e.py  test_prompt_properties.py  test_prompt_transformer.py  test_provider_anthropic.py  (+8 more)
tests/mocks/: __init__.py  anthropic_upstream.py  documents.py  openai_upstream.py
