[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmgateway"
version = "0.1.0"
description = "AI gateway and deterministic content-optimization proxy for LLM providers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

# --------------------------------------------------------------------------
# Tooling
# --------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --strict-markers --strict-config"
markers = [
    "integration: exercises the full ASGI application",
]

[tool.coverage.run]
source = ["gateway"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["gateway", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "TC",            # type-checking blocks
    "S",             # bandit
    "BLE",           # blind except
    "RUF",
    "ANN",           # annotations
]
ignore = ["ANN401"]  # allow `Any` in narrow, well-documented spots

[tool.ruff.lint.per-file-ignores]
# FastAPI resolves route and dependency annotations at runtime via get_type_hints,
# so the imports backing `Annotated[..., Depends(...)]` cannot move under TYPE_CHECKING.
"gateway/api/*" = ["TC"]
"tests/*" = ["ANN", "TC", "S101"]  # asserts are the point of a test

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.lint.isort]
# Installed as an editable package, so isort would otherwise treat it as third-party.
known-first-party = ["gateway", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
