[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zibbo"
version = "0.1.1"
description = "A deterministic context optimization engine for AI coding assistants. Strips structural noise from requests before they reach the model — no LLM in the loop, source code never touched."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mohammed Zaid" }]
keywords = ["llm", "tokens", "proxy", "claude-code", "coding-assistant", "context-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    # Verify upstream TLS against the OS trust store, so a locally installed CA — from a
    # corporate proxy or antivirus HTTPS inspection (e.g. Avast) — is trusted. Without it a
    # certifi-only client can't reach the provider and every request 502s. See main.py.
    "truststore>=0.9.0",
    # HTML parsing. lxml's C parser is ~10x html.parser and, unlike it, recovers
    # from the malformed markup that real web pages are made of.
    "lxml>=5.3.0",
    # Exact token counts. Encodings are fetched on first use, so the Docker image
    # pre-warms the cache at build time; see TIKTOKEN_CACHE_DIR in the Dockerfile.
    "tiktoken>=0.8.0",
    # Document extraction. pdfplumber reads PDFs; python-docx reads DOCX. Both are
    # used only inside their extractor and imported lazily, so their absence
    # degrades a format to "cannot extract" rather than breaking startup.
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    # Shared transformation cache. Imported lazily inside the Redis backend, which
    # degrades to "always miss" if the server is unreachable — so this is only needed
    # when ZIBBO_CACHE_BACKEND=redis, and its absence never breaks startup.
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # The real OpenAI SDK, driven against the gateway in tests/test_openai_sdk_compat.py.
    # Asserting on bytes proves the wire format; asserting that *their* client parses
    # our response proves compatibility.
    "openai>=1.60.0",
    # The real Anthropic SDK, driven against the gateway in test_anthropic_sdk_compat.py.
    "anthropic>=0.40.0",
    # Property-based tests: determinism and idempotency of every transformer.
    "hypothesis>=6.100.0",
    # PDF fixtures: the document-extraction tests generate real PDFs to feed the
    # extractor. Used only by tests/mocks/documents.py.
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/MohammedZaid-AI/zibbo"
Repository = "https://github.com/MohammedZaid-AI/zibbo"
Issues = "https://github.com/MohammedZaid-AI/zibbo/issues"
Changelog = "https://github.com/MohammedZaid-AI/zibbo/blob/main/CHANGELOG.md"

[project.scripts]
# The terminal client the Claude Code / Codex plugins shell out to. Stdlib-only, so it
# runs even before the gateway's own dependencies are on the path.
zibbo = "gateway.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

# --------------------------------------------------------------------------
# Tooling
# --------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --strict-markers --strict-config"
markers = [
    "integration: exercises the full ASGI application",
    "compat: drives the gateway with a real provider SDK",
    "property: property-based invariants (determinism, idempotency)",
]

[tool.coverage.run]
source = ["gateway"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["gateway", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "TC",            # type-checking blocks
    "S",             # bandit
    "BLE",           # blind except
    "RUF",
    "ANN",           # annotations
]
ignore = ["ANN401"]  # allow `Any` in narrow, well-documented spots

[tool.ruff.lint.per-file-ignores]
# FastAPI resolves route and dependency annotations at runtime via get_type_hints,
# so the imports backing `Annotated[..., Depends(...)]` cannot move under TYPE_CHECKING.
"gateway/api/*" = ["TC"]
# Asserts are the point of a test; the "hardcoded secrets" are fakes we grep logs for.
"tests/*" = ["ANN", "TC", "S101", "S105", "S106"]
# Benchmark corpora are generated from a fixed seed; `random` is the point, not a flaw.
"benchmarks/*" = ["S311", "S101"]
# Example plugins are standalone packages, linted on their own terms.
"examples/*" = ["ANN", "TC", "S101", "INP001"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.lint.isort]
# Installed as an editable package, so isort would otherwise treat it as third-party.
known-first-party = ["gateway", "tests"]

[[tool.mypy.overrides]]
module = ["benchmarks.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# lxml-stubs is incomplete and lags the library; the HTML transformer's use of it
# is narrow and covered by tests.
module = ["lxml.*"]
ignore_missing_imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
